[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
